--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
-Results/
-Datasets/
-_pycache_/
-.ipynb_checkpoints/
-datasets/
-images/
-results/
+_pycache_
+*/__pycache__
+*/*/__pycache__
+*/*/*/__pycache__
+
+.ipynb_checkpoints
+
+results/*
+datasets/*
